# GameGeometry

./: GameGeometry.cabal  game-geometry.cabal  stack.yaml
app/: Main.hs
bench/: MainBenchmarkSuite.hs
src/: GameGeometry.hs  Types.hs  Utils.hs
src/Geometry/: Angles.hs  BoundedGeometry.hs  Geometry.hs  RayTrace.hs  Shadows.hs
test/: Spec.hs
