name:                game-geometry
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/GameGeometry#readme
license:             BSD3
license-file:        LICENSE
author:              David Eichmann
maintainer:          example@example.com
copyright:           2016 David Eichmann
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       GameGeometry
                     , Geometry.Geometry
                     , Geometry.Angles
                     , Geometry.Shadows
                     , Geometry.BoundedGeometry
                     , Geometry.RayTrace
                     , Utils
  -- other-modules:
  --                      Utils
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , QuickCheck
                     , deepseq
                     , vector
                     , containers
                     , split
                     , safe
  default-language:    Haskell2010
  

executable GameGeometry-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-geometry
  default-language:    Haskell2010

test-suite GameGeometry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , game-geometry
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck
                     , deepseq
                     , linear
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--test-suite GameGeometry-test-internals
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test, src
--  main-is:             Spec2.hs
--  build-depends:       base
--                     , tasty
--                     , tasty-hunit
--                     , tasty-quickcheck
--                     , QuickCheck
--                     , deepseq
--                     , linear
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

benchmark GameGeometry-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             MainBenchmarkSuite.hs
  build-depends:       base,
                       criterion
                     , QuickCheck
                     , deepseq
                     , random
                     , linear
  ghc-options:         -Wall
                       -O2

source-repository head
  type:     git
  location: https://github.com/githubuser/GameGeometry
